ola-parser/src/testdata/syntaxTests/functionTypes/external_function_type_returning_internal.sol
contract C {
    fn() external returns (fn () internal) x;
}
// ----
// TypeError 2582: (46-67): Internal type cannot be used for external fn type.
